20220322_V01_P002. fix new Integer() to Integer.valueOf()